ultimazione pagine principali - funzionamento + mobile

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -29,6 +29,7 @@ p, li {
 @import './styles/forms';
 @import './styles/buble';
 @import './styles/vivi';
+@import './styles/crea';
 @import './styles/team';
 @import './styles/areapersonale';
 
