--- a/src/styles/_areapersonale.scss
+++ b/src/styles/_areapersonale.scss
@@ -145,6 +145,9 @@
         .content {
             width: 100%;
             margin: 2em 0;
+            h2 {
+                padding-top: 1em;
+            }
         }
     }
 }
