--- a/src/pages/Generator.scss
+++ b/src/pages/Generator.scss
@@ -1,12 +1,12 @@
 // GENERATOR//
-$bgc-viola: #960e3b;
-$bgc-blue: #2b5667;
-$bgc-blue-dark: #2f4653;
+// $bgc-viola: #960e3b;
+// $bgc-blue: #2b5667;
+// $bgc-blue-dark: #2f4653;
 
-$bgc-relax: #88abae;
-$bgc-cultura: #690e3b;
-$bgc-ristorazione: #d49e55;
-$bgc-arte: #667384;
+// $bgc-relax: #88abae;
+// $bgc-cultura: #690e3b;
+// $bgc-ristorazione: #d49e55;
+// $bgc-arte: #667384;
 
 $e: #c1c2d2;
 $u: #690023;
