--- a/src/styles/_buble.scss
+++ b/src/styles/_buble.scss
@@ -25,7 +25,8 @@
         color: white;
         width: 100%;
         margin-bottom: 1em;
-
+        padding-bottom: 3em;
+        
         h2 {
             padding: 1em;
         }
