--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,7 +2,7 @@ $bgc-viola: #960e3b;
 $bgc-blue: #2b5667;
 $bgc-blue-dark: #2f4653;
 
-$bgc-relax: #88abae;
+$bgc-relax: #80b0b4;
 $bgc-cultura: #690e3b;
 $bgc-ristorazione: #d49e55;
 $bgc-arte: #667384;
