--- a/src/styles/_forms.scss
+++ b/src/styles/_forms.scss
@@ -1,7 +1,7 @@
 .bgc-img-registrati {
-   
     background-image: url(./img/group.jpeg);
     background-size: cover;
+    transform: scale(1.3);
     height: 95vh;
     background-position: center center;
     filter: blur(8px);
@@ -44,7 +44,7 @@
     margin: 7em auto;
     background-color: $bgc-blue;
     color: white;
-    padding: 1em 2em;
+    padding: 1em 3em; 
     display: flex;
     flex-direction: column;
     text-align: center;
@@ -52,12 +52,27 @@
     top: -2%;
     left: 32%;
     *{
-        padding: .8em 3em;
+        padding: .8em 0em;
+        // text-align: center;
+        
     }
     input {
-        text-align: center;
+        width: 200px;
+        padding: .8em;
+
+    margin-right: 3em;
+        // text-align: center;
+    }
+   
+    label {
+        width: 400px;
     }
     button {
         margin: 2em;
+    }
+}
+.modal {
+    input{
+        width: 240px;
     }
 }
