--- a/src/styles/_home-chisiamo.scss
+++ b/src/styles/_home-chisiamo.scss
@@ -669,11 +669,11 @@ section a {
     height: 50vh;
 
     .content {
-        padding: 2em 10vw;
+        // padding: 2em 10vw;
         // width: 300px;
         margin: auto;
         // line-height: 1.6em;
-        text-align: left;
+        text-align: center;
         h3 {
             text-transform: lowercase;
         }
