--- a/src/styles/_home-chisiamo.scss
+++ b/src/styles/_home-chisiamo.scss
@@ -673,7 +673,7 @@ section a {
         // width: 300px;
         margin: auto;
         // line-height: 1.6em;
-        text-align: center;
+        text-align: right;
         h3 {
             text-transform: lowercase;
         }
@@ -796,7 +796,7 @@ table {
 #slogan.areapersonale .content {
     width: 600px;
     padding: 10em 2em;
-    text-align: center;
+    text-align: right;
 }
 
 #carrello {
